--- a/css/base.css
+++ b/css/base.css
@@ -1,8 +1,25 @@
 body {
   font-family: var(--font-body);
+  font-size: var(--font-size-base);
   color: var(--color-text);
   background-color: var(--color-bg);
-  line-height: 1.6;
+  line-height: var(--line-height-base);
+}
+
+h1,
+h2,
+h3 {
+  line-height: var(--line-height-heading);
+  font-weight: 600;
+}
+
+h1 {
+  font-size: var(--font-size-xl);
+  margin-bottom: 1rem;
+}
+
+p {
+  max-width: 60ch;
 }
 
 a {
