--- a/css/components.css
+++ b/css/components.css
@@ -39,3 +39,19 @@
 .nav__list a:hover {
   text-decoration: underline;
 }
+
+.project-card h2 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-size: 1.25rem;
+}
+
+.project-card p {
+  margin-bottom: 0.75rem;
+  line-height: 1.5;
+}
+
+.project-card .btn {
+  display: inline-block;
+  text-decoration: none;
+}
