--- a/css/layout.css
+++ b/css/layout.css
@@ -66,3 +66,13 @@ main {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+.projects {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
+}
+
+.projects h1 {
+  margin-bottom: 2rem;
+}
