--- a/css/base.css
+++ b/css/base.css
@@ -1,15 +1,16 @@
 body {
   font-family: var(--font-body);
   font-size: var(--font-size-base);
-  color: var(--color-text);
+  color: #222222;
   background-color: var(--color-bg);
   line-height: var(--line-height-base);
+  line-height: 1.6;
 }
 
 h1,
 h2,
 h3 {
-  line-height: var(--line-height-heading);
+  line-height: 1.3;
   font-weight: 600;
 }
 
