--- a/css/variables.css
+++ b/css/variables.css
@@ -9,7 +9,10 @@
 
   --line-height-base: 1.6;
   --line-height-heading: 1.25;
+
   --color-bg: #ffffff;
   --color-text: #222222;
   --color-primary: #0057ff;
+  --color-primary-hover: #0041cc;
+  --color-accent: #f39c12;
 }
