--- a/css/base.css
+++ b/css/base.css
@@ -1,10 +1,9 @@
 body {
   font-family: var(--font-body);
   font-size: var(--font-size-base);
-  color: #222222;
+  color: var(--color-text);
   background-color: var(--color-bg);
   line-height: var(--line-height-base);
-  line-height: 1.6;
 }
 
 h1,
@@ -24,6 +23,5 @@ p {
 }
 
 a {
-  text-decoration: none;
   color: inherit;
 }
